se agrego pizza.js, se agrego cart al navbar y como pagina propia, se agrego pizzacart para renderizar las pizzas en el carro, y se modifcio un poco cardpizza para renderizar correctamente las pizzas

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,6 +1,19 @@
 .bodyHome{
     display: flex;
-    width: 100%;
+    min-width: 100%;
     justify-content: center;
     align-items: center;
+}
+
+.pizzas{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+    justify-content: space-evenly;
+}
+.listaPizza>img{
+    border-radius: 8px;
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
 }
