--- a/src/Components/CardPizza.css
+++ b/src/Components/CardPizza.css
@@ -1,8 +1,8 @@
 img{
   
-    width: 250px;
+    width: 240px;
     height: 200px;
-    margin: 10px;
+    margin: 5px;
 }
 .pizzaLogo{
     background-size: contain;
@@ -27,22 +27,42 @@ img{
   font-size:15px;
 }
 .cardPiza{
-
-    align-items: center;
+    border: 1px solid black;
     display: flex;
-    min-height: 500px;
+    min-height: 450px;
     width: 350px;
-    padding-top: 20px;
+    margin: 10px;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-    justify-content: center
 }
 .cardTop{
-    text-align: left;
+    text-align: center;
+
 }
 
 
 .cardPizaBoton{
-    width: 350px;
+    width: 340px;
     display: flex;
-    justify-content: space-around
+    justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.cartLista{
+    display: row;
+    background-color: red;
+    width: 300px;
+}
+.cartTop>img{
+width: 100px;
+height: 50px;
+}
+
+.cartpizzas{
+    margin: 20px;
+
+}
+.cartPizaBoton{
+    background-color: blue;
 }
